Cleanup and modernisation